Replace jna with Foreign Memory Access